--- a/Desktop/app/src/main/res/layout/quick_card.xml
+++ b/Desktop/app/src/main/res/layout/quick_card.xml
@@ -3,11 +3,13 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/card_view"
-    android:layout_width="100dp"
+    android:layout_width="140dp"
     android:layout_height="wrap_content"
     card_view:cardUseCompatPadding="true"
     card_view:cardCornerRadius="8dp"
-    android:layout_marginBottom="16dp">
+    android:layout_marginBottom="16dp"
+    android:layout_marginLeft="15dp"
+    card_view:cardBackgroundColor="#E1BEE7">
 
 
 
@@ -21,10 +23,11 @@
             android:layout_height="wrap_content"
             android:contentDescription="@string/action_settings"
             android:src="@drawable/chic_prince"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            />
 
         <TextView
-            android:id="@+id/country_name"
+            android:id="@+id/prince_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="13sp"
@@ -33,6 +36,7 @@
             android:paddingBottom="8dp"
             android:paddingTop="8dp"
             android:layout_alignParentBottom="true"
+            android:textColor="#000000"
             />
 
     </RelativeLayout>
