--- a/Desktop/app/src/main/res/layout/quick_card.xml
+++ b/Desktop/app/src/main/res/layout/quick_card.xml
@@ -3,7 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/card_view"
-    android:layout_width="140dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     card_view:cardUseCompatPadding="true"
     card_view:cardCornerRadius="8dp"
@@ -19,7 +19,7 @@
 
         <ImageView
             android:id="@+id/prince_photo"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:contentDescription="@string/action_settings"
             android:src="@drawable/chic_prince"
